# prooflog

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: README.md  architecture.md  cli.md  contributing.md  demo.md  installation.md  operating-model.md  parser-fixtures.md  prd.md  release-checklist.md  risks.md  roadmap.md
scripts/: release.sh
src/: main.rs
tests/: cli.rs  parser_fixtures.rs  release_script.rs
tests/fixtures/codex/: 01_single_success.jsonl  02_fail_then_pass.jsonl  03_unresolved_failure.jsonl  04_approval_risk.jsonl  05_file_edits_diff.jsonl
tests/snapshots/: cli__proof_markdown_format_is_snapshot_covered.snap  parser_fixtures__01_single_success.snap  parser_fixtures__02_fail_then_pass.snap  parser_fixtures__03_unresolved_failure.snap  parser_fixtures__04_approval_risk.snap  parser_fixtures__05_file_edits_diff.snap
